@@ -57,7 +57,7 @@ omxCheckError(mxRun(model3), paste("The algebras/matrices",
 A <- mxMatrix('Full', 1, 1, name = 'A')
 B <- mxMatrix('Full', 1, 1, name = 'B', labels = 'A[0,0]')
 model <- mxModel('model', A, B)
-omxCheckError(mxRun(model), paste("The label 'A[0, 0]' of matrix 'B'",
+omxCheckError(mxRun(model), paste("The label 'A[0,0]' of matrix 'B'",
 	"in model 'model' does not evaluate to a (1 x 1) matrix."))
 kevin <- 'bacon'
 B <- mxAlgebra(A[kevin, ], name = 'B')
