@@ -45,11 +45,12 @@ multilevelModel2 <- mxModel("Multilevel_2",
     ),
     mxMatrix("Full", 2, 2, 
         labels=c(NA,  NA,
-                "Rand[data.ID,1]", NA), 
+                "acell[1,1]", NA), 
         free=FALSE, 
         name="A", 
         byrow=TRUE
     ),
+	mxAlgebra(Rand[data.ID,1], name="acell"),
     mxMatrix("Symm", 2, 2,
         values=c(.9,0,.9),
         free=c(T,
@@ -72,10 +73,11 @@ multilevelModel2 <- mxModel("Multilevel_2",
     mxMatrix("Full", nrow=1, ncol=length(manifestVars),
         values=0,
         free=FALSE,
-        labels=c(NA,"Rand[data.ID,2]"),
+        labels=c(NA,"mcell[1,1]"),
         dimnames=list(NULL, manifestVars),
         name="M"
     ),
+	mxAlgebra(Rand[data.ID,2], name="mcell"),
     mxFIMLObjective(covariance="R", means="M"),
     mxData(tDataFrame, type="raw")
 )
